--- a/static/mainpage.css
+++ b/static/mainpage.css
@@ -57,6 +57,7 @@ nav .menu{
   height: 100%;
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
+  
 }
 .center{
   position: absolute;
@@ -79,11 +80,11 @@ nav .menu{
 }
 
 .center .btns{
-height: 55px;
-width: 270px;
+height: 62px;
+width: 250px;
 border-radius: 5px;
 margin: 20px 40px;
-border: 2px solid white;
+border: 4px solid white;
 font-size: 20px;
 font-weight: 500;
 padding: 12px 26px;
@@ -91,9 +92,8 @@ cursor: pointer;
 text-decoration: none;
 display: inline-block;
 color: white;
-
+font-weight: bold;
 }
-
 
 
 /*---------x--------indexpage end----------x-----------*/
@@ -198,12 +198,11 @@ form .row input::placeholder{
   /*border: 1px solid #16a085;*/
   border: 1px solid linear-gradient(-135deg, #71b7e6, #9b59b6);
   cursor: pointer;
+  transition: all 0.3s ease;
 }
-form .button input:hover{
-  /*background: #12876f;*/
-  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
-  
-}
+
+
+
 .wrapper form .signup-link{
   text-align: center;
   margin-top: 20px;
@@ -306,6 +305,7 @@ form .input-box span.details{
 
 /*--------------add post------------------------------*/
 
+
 .container1{
   z-index: 12;
   max-width: 1050px;
@@ -315,6 +315,10 @@ form .input-box span.details{
   margin: 0 20px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
   position: relative;
+  place-content: center;
+  margin-top: 8%;
+  margin-left: 10%;
+  
   
 }
 .container1 .content1{
@@ -322,6 +326,7 @@ form .input-box span.details{
   align-items: center;
   justify-content: space-between;
   padding: 25px 20px;
+  
   
 }
 
@@ -334,7 +339,7 @@ form .input-box span.details{
   width: 80%;
   margin-right: 60px;
   position: center;
-  
+  ;
   align-items: center;
   justify-content: center;
 }
@@ -355,6 +360,7 @@ form .input-box span.details{
   background: #fae9fb;
   border: 2px solid transparent;
   transition: all 0.3s ease;
+  
 }
 .content1 .input-box input:focus,
 .content1 .input-box input:valid{
@@ -535,3 +541,32 @@ nav .menu{
   color: black;
 }
 /*--------x-----------viewpost table end-----------x------------*/
+.new .btns{
+  height: 55px;
+  width: 170px;
+  border-radius: 5px;
+  border: none;
+  margin: 0 10px;
+  border: 2px solid white;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0 10px;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+    
+  }
+  .new .btns button:first-child{
+    color: #fff;
+    background: none;
+  }
+  .btns button:first-child:hover{
+    background: white;
+    color: black;
+  }
+  
+/*------------------------social media--------------------------*/
+
+
+/*--------------x----------social media end-------------x-------------*/
+
