--- a/templates/authoradmin.html
+++ b/templates/authoradmin.html
@@ -6,37 +6,31 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
+  <nav>
+    <div class="menu">
+      <div class="logo">
+        <a href="#">Authors space</a>
+      </div>
+      <ul>      
+        <li><a href="/">Logout</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="center">
+    
+    <!--<div class="title">Let your blogging exprience starts here</div>
+    <div class="sub_title">Read,write and explore</div> -->
+      <a href="/addpost" class="btns">Add Post</a>
+      <a href="/viewpost" class="btns">View Post</a>
+    </div>
+  
   <div class="sidebar">
     <div class="logo-details">
       <i class='bx bxl-c-plus-plus'></i>
       <span class="logo_name">Bloggers Spot</span>
     </div>
-      <ul class="nav-links">
-        <li>
-          <a href="/addpost" class="active">
-            <i class='bx bx-grid-alt' ></i>
-            <span class="links_name">Add post</span>
-          </a>
-        </li>
-        <li>
-          <a href="/viewpost">
-            <i class='bx bx-box' ></i>
-            <span class="links_name">View Post</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class='bx bx-list-ul' ></i>
-            <span class="links_name">Delete Post</span>
-          </a>
-        </li>
-        <li class="log_out">
-          <a href="/">
-            <i class='bx bx-log-out'></i>
-            <span class="links_name">Log out</span>
-          </a>
-        </li>
-      </ul>
+       <!--<a href="/authoruser" class="btns">Login as Author</a>
+       <a href="/loginuser" class="btns">Login as User</a>-->
   </div>
 
  
