--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,28 +4,25 @@
 
 <body>
     <h1>Welcome to Edit page</h1>
-    <form action="/updatedata" method="post">
+    <!--<form action="/bupdatedata" method="post">-->
         <table border="1px">
             <tr>
                 <td>Name</td>
-                <td><input type="text" name="username" value="{{t[0]}}"></td>
+                <td><input type="text" name="Name" value="{{t[0]}}"></td>
             </tr>
             <tr>
-                <td>City</td>
-                <td><input type="text" name="usercity" value="{{t[1]}}"></td>
+                <td>Title</td>
+                <td><input type="text" name="Title" value="{{t[1]}}"></td>
             </tr>
             <tr>
-                <td>email</td>
-                <td><input type="email" name="useremail" value="{{t[2]}}"></td>
+                <td>Description</td>
+                <td><input type="text" name="Description" value="{{t[2]}}"></td>
             </tr>
-            <tr>
-                <td>password</td>
-                <td><input type="password" name="userpassword" value="{{t[3]}}"></td>
-            </tr>
-            <tr>
+
+            <!--<tr>
                 <td><input type="submit"></td>
                 <td><input type="reset"></td>
-            </tr>
+            </tr>-->
 
 
         </table>
